# ceagle

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  README.md  README.rst  requirements.txt  runserver.sh  setup.cfg  test-requirements.txt  tox.ini
ceagle/: app.py  cmd.py  config.py  main.py  wsgi.py
ceagle/api/: base.py  client.py
ceagle/api/v1/: cloud_status.py  infrastructure.py  intelligence.py  optimization.py  regions.py  runbooks.py  security.py  status.py
ceagle/api_fake_data/: availability.py  base.py  cloud_status_data.py  fake_infra.py  fake_regions.py  fake_runbooks.py  fake_security.py  fake_status.py  health.py  security.py
ceagle/blueprints/capacity/: capacity.py
ceagle/blueprints/cloud_status/: cloud_status.py
ceagle/blueprints/security/: security.py
ceagle/mock_api/: mock_api.py
ceagle/services/: service.py
ceagle/templates/: about.html  api_index.html  health.html  index.html  layout.html
cloudeagle/: app.py  main.py
cloudeagle/templates/: health.html  index.html  layout.html
docker/ceagle/: Dockerfile.j2  PKG-INFO
etc/: README.rst  config.json  config.yaml  eagle_config.json  fuel_config.json
raml/: abao_hooks.js  api.raml
raml/forms/: runbook.yaml
raml/schemas/: 200.json  404.json
raml/validation/: abao.sh  abao_hooks.js
service/: ceagle.yaml
service/files/: ceagle.json.j2  ceagle.yaml.j2  defaults.yaml
tests/ci/: fake-clients-config.json  fake-clients-config.yaml
tests/unit/: test.py  test_app.py  test_cmd.py  test_config.py  test_main.py  test_noop.py
tools/: ramllint.sh  ramllint.yaml  yamllint.yaml
(+58 files in other folders)
