[metadata]
name = cloud-eagle
summary = OpenStack DevOps portal
description-file =
    README.rst
author = Mirantis Inc.
author-email = bpavlovic@mirantis.com
home-page = mirantis.com
license = Apache License, Version 2.0
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    ceagle

[entry_points]
console_scripts =
    ceagle = ceagle.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

